First nonworking attempt at mis2, few data collection things